syntax = "proto3";

import "google/protobuf/wrappers.proto";

package com.wixpress.dst.greyhound.sidecar.api.v1;

service GreyhoundSidecar {
    rpc Produce (ProduceRequest) returns (ProduceResponse);
    rpc CreateTopics (CreateTopicsRequest) returns (CreateTopicsResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc StartConsuming (StartConsumingRequest) returns (StartConsumingResponse);
}

message RegisterRequest {
    string host = 1;
    string port = 2;
}

message RegisterResponse {
}

message StartConsumingRequest {
    repeated Consumer consumers = 2;
}

message Consumer {
    string group = 2;
    string topic = 3;
}

message StartConsumingResponse {
}

message ProduceRequest {
    string topic = 1;
    google.protobuf.StringValue payload = 2;
    oneof Target {
        string key = 3;
    }
    map<string, string> custom_headers = 4;
}

message ProduceResponse {
}

message CreateTopicsRequest {
    repeated TopicToCreate topics = 1;
}

message TopicToCreate {
    string name = 1;
    google.protobuf.Int32Value partitions = 2;
}

message CreateTopicsResponse {
}
